# smc-android-native

./: .cproject  .gitignore  .project  notest
jni/: Android.mk  Application.mk  CMakeLists.txt  aclocal.m4  main.cpp
jni/SDL2/android-project/jni/src/: Android.mk
jni/autom4te.cache/: output.1  requests  traces.1  traces.2
jni/cegui/include/CEGUI/: Config.h  ModuleConfig.h
jni/cegui/lib/armeabi-v7a/: libCEGUIBase-9999.so.3  libCEGUINullRenderer-9999.so.3  libCEGUINullRenderer-9999.so.3.0.0
jni/data/campaign/: smc.smccpn
jni/data/editor/: level_items.xml  world_items.xml
jni/data/gui/font/: bluebold1024_big.font
jni/data/gui/imagesets/: SMCLook256.imageset
jni/data/gui/layout/level_settings/: tab_global_effect.layout  tab_main.layout
jni/data/gui/layout/menu/: tab_audio.layout  tab_joystick.layout  tab_video.layout
jni/data/levels/: cave_1.smclvl  dj_kirby_1.smclvl  dj_kirby_1_sub.smclvl  eatomania.smclvl  flippa_3_desert.smclvl  flippa_3_green.smclvl  flippa_3_mushroom.smclvl  flippa_3_sky.smclvl  frosty_climber.smclvl  furball_hills.smclvl  houses.smclvl  ita_1.smclvl  jr_cave.smclvl  jungle_1.smclvl  lvl_2.smclvl  lvl_2_sub_1.smclvl  lvl_3.smclvl  lvl_4_sub_1.smclvl  menu_blue_1.smclvl  menu_green_1.smclvl  mt_bon.smclvl  neverland.smclvl  night_sky.smclvl  pasol_1.smclvl  pasol_3.smclvl  red8.smclvl  sauer2_1.smclvl  sauer2_13.smclvl  sauer2_13end.smclvl  sauer2_14.smclvl  sauer2_nolin.smclvl  scaley.smclvl  speed_test.smclvl  stephan_2.smclvl  stephan_3_1.smclvl  stephan_4.smclvl  stephan_4_1.smclvl  stephan_4_2.smclvl  test_1_mn.smclvl  test_2.smclvl  (+11 more)
jni/data/pixmaps/clouds/default_1/: 1_left.settings  1_right.settings  2_small.settings
jni/data/pixmaps/clouds/light_yellow_1/: 1.settings  4.settings  7.settings  9.settings
jni/data/pixmaps/pipes/blue/: left.settings  right.settings  up.settings  ver.settings
jni/data/pixmaps/pipes/green/: down.settings  hor.settings  right.settings  ver.settings
jni/data/pixmaps/pipes/grey/: down.settings  up.settings  ver.settings
jni/data/pixmaps/pipes/orange/: left.settings  ver.settings
jni/data/pixmaps/pipes/yellow/: right.settings  up.settings  ver.settings
jni/data/schema/: Campaign.xsd  Config.xsd  Editor_Menu.xsd  Savegame_old.xsd
jni/data/schema/World/: Lines.xsd  World.xsd
jni/data/sounds/: error.txt
jni/data/sounds/item/: mushroom.txt
jni/data/world/world_1/: world.xml
jni/data/world/world_3/: description.xml  layer.xml  world.xml
jni/docs/: history.html  license.txt
jni/libintl-lite/include/: libintl.h
jni/makefiles/Codeblocks/VC8/: Readme German.txt  SMC.depend
jni/makefiles/MSVC7.1/: Secret Maryo Chronicles.sln
jni/makefiles/MSVC8.0/: Secret Maryo Chronicles.sln
jni/makefiles/MSVC9.0/: Secret Maryo Chronicles.sln  Secret Maryo Chronicles.vcproj  Skript.rc
jni/sources/SDL2/: Application.mk
jni/sources/SDL2_image/: Android.mk  Application.mk
jni/sources/SDL2_mixer/: Android.mk  Application.mk
jni/sources/SDL_ttf/: Android.mk  Application.mk
jni/sources/boost_source/configs/: user-config-boost-1_55_0.jam
jni/sources/libintl/: Android.mk  Application.mk
jni/sources/libintl-lite-0.5/internal/: libintl.cpp
jni/src/: Android.mk  Makefile.in  config.h.in  configure
jni/src/audio/: random_sound.cpp
jni/src/autom4te.cache/: traces.0
jni/src/core/: campaign_manager.cpp  campaign_manager.h  editor.cpp  editor.h  game_core.cpp  game_core.h  i18n.cpp  i18n.h  main.cpp  property_helper.h
jni/src/data/: Makefile.in
jni/src/data/editor/: level_menu.xml  world_menu.xml
jni/src/data/gui/font/: bluebold1024_medium.font
jni/src/data/gui/layout/: box_question.layout  box_text.layout  debugtext.layout  default.layout  editor.layout  loading.layout  statictext.layout
jni/src/data/gui/looknfeel/: TaharezLook.looknfeel
jni/src/data/gui/schemes/: TaharezLook.scheme
jni/src/data/levels/: all.smclvl  cave_1_2.smclvl  david_1.smclvl  empty.smclvl  flan.smclvl  flippa_2.smclvl  flippa_3.smclvl  game_tutorial.smclvl  ita_2.smclvl  keywest_1.smclvl  lake_shore_paradise.smclvl  lvl_1.smclvl  lvl_10.smclvl  lvl_1_sub_1.smclvl  lvl_4.smclvl  lvl_5.smclvl  lvl_6.smclvl  lvl_7.smclvl  lvl_8.smclvl  lvl_9.smclvl  mt_sec.smclvl  pasol_2.smclvl  sauer2_11.smclvl  sauer2_12.smclvl  sauer2_3.smclvl  sauer2_4.smclvl  sauer2_6.smclvl  sauer2_7.smclvl  sauer2_7_boss.smclvl  sauer2_9.smclvl  sauer2_nolin_sub.smclvl  space.smclvl  stephan_1.smclvl  stephan_3.smclvl  stephan_3_2.smclvl  stephan_5_1.smclvl  stephane_1.smclvl  test_1.smclvl  test_10.smclvl  test_5.smclvl  (+16 more)
jni/src/data/pixmaps/game/: gold_m.settings
jni/src/data/schema/: Editor_Items.xsd  Level.xsd  Savegame.xsd
jni/src/data/schema/World/: Description.xsd
jni/src/data/sounds/: sprout_1.txt
jni/src/data/sounds/item/: fireball.txt  fireplant.txt  live_up_2.txt
jni/src/docs/: controls.html  style.css
jni/src/enemies/: eato.cpp  flyon.cpp  furball.cpp  gee.cpp  krush.cpp  rokko.cpp  spika.cpp  spikeball.cpp  static.cpp  thromp.cpp  turtle.cpp
jni/src/enemies/bosses/: turtle_boss.cpp
jni/src/gui/: generic.cpp  hud.cpp  menu.cpp  menu.h  menu_data.cpp  menu_data.h  spinner.h
jni/src/input/: joystick.cpp  keyboard.cpp  keyboard.h  mouse.cpp
jni/src/level/: level.cpp  level.h  level_background.h  level_editor.cpp  level_editor.h  level_manager.cpp  level_player.cpp  level_settings.cpp  level_settings.h
jni/src/makefiles/MSVC7.1/: Secret Maryo Chronicles.vcproj
jni/src/makefiles/MSVC8.0/: Secret Maryo Chronicles.vcproj
jni/src/makefiles/MSVC9.0/: resource.h
jni/src/objects/: bonusbox.cpp  box.cpp  level_entry.cpp  level_exit.cpp  level_exit.h  moving_platform.cpp  path.cpp  sprite.cpp  sprite.h  star.cpp  text_box.cpp
jni/src/overworld/: overworld.cpp  overworld.h  world_editor.cpp  world_editor.h  world_layer.cpp  world_layer.h  world_manager.h  world_waypoint.cpp
jni/src/src/: Makefile.in
jni/src/user/: preferences.cpp  preferences.h  savegame.cpp  savegame.h
jni/src/video/: animation.cpp  color.h  gl_surface.cpp  gl_surface.h  img_manager.cpp  renderer.cpp  video.cpp  video.h
(+118 files in other folders)
