cmake_minimum_required(VERSION 2.8.4)
project(jni)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

include_directories(cegui/include
    boost/include
    SDL2/include
    SDL2_mixer/include
    SDL2_image/include
    SDL2_ttf/include)

set(SOURCE_FILES
    boost/include/boost-1_55/boost/atomic/detail/base.hpp
    boost/include/boost-1_55/boost/atomic/detail/cas128strong.hpp
    boost/include/boost-1_55/boost/atomic/detail/cas32strong.hpp
    boost/include/boost-1_55/boost/atomic/detail/cas32weak.hpp
    boost/include/boost-1_55/boost/atomic/detail/cas64strong-ptr.hpp
    boost/include/boost-1_55/boost/atomic/detail/cas64strong.hpp
    boost/include/boost-1_55/boost/atomic/detail/config.hpp
    boost/include/boost-1_55/boost/atomic/detail/gcc-alpha.hpp
    boost/include/boost-1_55/boost/atomic/detail/gcc-armv6plus.hpp
    boost/include/boost-1_55/boost/atomic/detail/gcc-atomic.hpp
    boost/include/boost-1_55/boost/atomic/detail/gcc-cas.hpp
    boost/include/boost-1_55/boost/atomic/detail/gcc-ppc.hpp
    boost/include/boost-1_55/boost/atomic/detail/gcc-sparcv9.hpp
    boost/include/boost-1_55/boost/atomic/detail/gcc-x86.hpp
    boost/include/boost-1_55/boost/atomic/detail/generic-cas.hpp
    boost/include/boost-1_55/boost/atomic/detail/interlocked.hpp
    boost/include/boost-1_55/boost/atomic/detail/link.hpp
    boost/include/boost-1_55/boost/atomic/detail/linux-arm.hpp
    boost/include/boost-1_55/boost/atomic/detail/lockpool.hpp
    boost/include/boost-1_55/boost/atomic/detail/platform.hpp
    boost/include/boost-1_55/boost/atomic/detail/type-classification.hpp
    boost/include/boost-1_55/boost/atomic/detail/windows.hpp
    boost/include/boost-1_55/boost/atomic/atomic.hpp
    boost/include/boost-1_55/boost/filesystem/detail/utf8_codecvt_facet.hpp
    boost/include/boost-1_55/boost/filesystem/config.hpp
    boost/include/boost-1_55/boost/filesystem/convenience.hpp
    boost/include/boost-1_55/boost/filesystem/exception.hpp
    boost/include/boost-1_55/boost/filesystem/fstream.hpp
    boost/include/boost-1_55/boost/filesystem/operations.hpp
    boost/include/boost-1_55/boost/filesystem/path.hpp
    boost/include/boost-1_55/boost/filesystem/path_traits.hpp
    boost/include/boost-1_55/boost/system/api_config.hpp
    boost/include/boost-1_55/boost/system/config.hpp
    boost/include/boost-1_55/boost/system/cygwin_error.hpp
    boost/include/boost-1_55/boost/system/error_code.hpp
    boost/include/boost-1_55/boost/system/linux_error.hpp
    boost/include/boost-1_55/boost/system/system_error.hpp
    boost/include/boost-1_55/boost/system/windows_error.hpp
    boost/include/boost-1_55/boost/thread/detail/async_func.hpp
    boost/include/boost-1_55/boost/thread/detail/config.hpp
    boost/include/boost-1_55/boost/thread/detail/counter.hpp
    boost/include/boost-1_55/boost/thread/detail/delete.hpp
    boost/include/boost-1_55/boost/thread/detail/force_cast.hpp
    boost/include/boost-1_55/boost/thread/detail/invoke.hpp
    boost/include/boost-1_55/boost/thread/detail/is_convertible.hpp
    boost/include/boost-1_55/boost/thread/detail/lockable_wrapper.hpp
    boost/include/boost-1_55/boost/thread/detail/log.hpp
    boost/include/boost-1_55/boost/thread/detail/make_tuple_indices.hpp
    boost/include/boost-1_55/boost/thread/detail/memory.hpp
    boost/include/boost-1_55/boost/thread/detail/move.hpp
    boost/include/boost-1_55/boost/thread/detail/platform.hpp
    boost/include/boost-1_55/boost/thread/detail/singleton.hpp
    boost/include/boost-1_55/boost/thread/detail/thread.hpp
    boost/include/boost-1_55/boost/thread/detail/thread_group.hpp
    boost/include/boost-1_55/boost/thread/detail/thread_heap_alloc.hpp
    boost/include/boost-1_55/boost/thread/detail/thread_interruption.hpp
    boost/include/boost-1_55/boost/thread/detail/tss_hooks.hpp
    boost/include/boost-1_55/boost/thread/pthread/condition_variable.hpp
    boost/include/boost-1_55/boost/thread/pthread/condition_variable_fwd.hpp
    boost/include/boost-1_55/boost/thread/pthread/mutex.hpp
    boost/include/boost-1_55/boost/thread/pthread/once.hpp
    boost/include/boost-1_55/boost/thread/pthread/once_atomic.hpp
    boost/include/boost-1_55/boost/thread/pthread/pthread_mutex_scoped_lock.hpp
    boost/include/boost-1_55/boost/thread/pthread/recursive_mutex.hpp
    boost/include/boost-1_55/boost/thread/pthread/shared_mutex.hpp
    boost/include/boost-1_55/boost/thread/pthread/shared_mutex_assert.hpp
    boost/include/boost-1_55/boost/thread/pthread/thread_data.hpp
    boost/include/boost-1_55/boost/thread/pthread/thread_heap_alloc.hpp
    boost/include/boost-1_55/boost/thread/pthread/timespec.hpp
    boost/include/boost-1_55/boost/thread/v2/shared_mutex.hpp
    boost/include/boost-1_55/boost/thread/v2/thread.hpp
    boost/include/boost-1_55/boost/thread/win32/basic_recursive_mutex.hpp
    boost/include/boost-1_55/boost/thread/win32/basic_timed_mutex.hpp
    boost/include/boost-1_55/boost/thread/win32/condition_variable.hpp
    boost/include/boost-1_55/boost/thread/win32/interlocked_read.hpp
    boost/include/boost-1_55/boost/thread/win32/mfc_thread_init.hpp
    boost/include/boost-1_55/boost/thread/win32/mutex.hpp
    boost/include/boost-1_55/boost/thread/win32/once.hpp
    boost/include/boost-1_55/boost/thread/win32/recursive_mutex.hpp
    boost/include/boost-1_55/boost/thread/win32/shared_mutex.hpp
    boost/include/boost-1_55/boost/thread/win32/thread_data.hpp
    boost/include/boost-1_55/boost/thread/win32/thread_heap_alloc.hpp
    boost/include/boost-1_55/boost/thread/win32/thread_primitives.hpp
    boost/include/boost-1_55/boost/thread/barrier.hpp
    boost/include/boost-1_55/boost/thread/completion_latch.hpp
    boost/include/boost-1_55/boost/thread/condition.hpp
    boost/include/boost-1_55/boost/thread/condition_variable.hpp
    boost/include/boost-1_55/boost/thread/cv_status.hpp
    boost/include/boost-1_55/boost/thread/exceptions.hpp
    boost/include/boost-1_55/boost/thread/externally_locked.hpp
    boost/include/boost-1_55/boost/thread/externally_locked_stream.hpp
    boost/include/boost-1_55/boost/thread/future.hpp
    boost/include/boost-1_55/boost/thread/future_error_code.hpp
    boost/include/boost-1_55/boost/thread/is_locked_by_this_thread.hpp
    boost/include/boost-1_55/boost/thread/latch.hpp
    boost/include/boost-1_55/boost/thread/lock_algorithms.hpp
    boost/include/boost-1_55/boost/thread/lock_concepts.hpp
    boost/include/boost-1_55/boost/thread/lock_factories.hpp
    boost/include/boost-1_55/boost/thread/lock_guard.hpp
    boost/include/boost-1_55/boost/thread/lock_options.hpp
    boost/include/boost-1_55/boost/thread/lock_traits.hpp
    boost/include/boost-1_55/boost/thread/lock_types.hpp
    boost/include/boost-1_55/boost/thread/lockable_adapter.hpp
    boost/include/boost-1_55/boost/thread/lockable_concepts.hpp
    boost/include/boost-1_55/boost/thread/lockable_traits.hpp
    boost/include/boost-1_55/boost/thread/locks.hpp
    boost/include/boost-1_55/boost/thread/mutex.hpp
    boost/include/boost-1_55/boost/thread/null_mutex.hpp
    boost/include/boost-1_55/boost/thread/once.hpp
    boost/include/boost-1_55/boost/thread/poly_lockable.hpp
    boost/include/boost-1_55/boost/thread/poly_lockable_adapter.hpp
    boost/include/boost-1_55/boost/thread/poly_shared_lockable.hpp
    boost/include/boost-1_55/boost/thread/poly_shared_lockable_adapter.hpp
    boost/include/boost-1_55/boost/thread/recursive_mutex.hpp
    boost/include/boost-1_55/boost/thread/reverse_lock.hpp
    boost/include/boost-1_55/boost/thread/scoped_thread.hpp
    boost/include/boost-1_55/boost/thread/shared_lock_guard.hpp
    boost/include/boost-1_55/boost/thread/shared_mutex.hpp
    boost/include/boost-1_55/boost/thread/strict_lock.hpp
    boost/include/boost-1_55/boost/thread/sync_bounded_queue.hpp
    boost/include/boost-1_55/boost/thread/sync_queue.hpp
    boost/include/boost-1_55/boost/thread/synchronized_value.hpp
    boost/include/boost-1_55/boost/thread/testable_mutex.hpp
    boost/include/boost-1_55/boost/thread/thread.hpp
    boost/include/boost-1_55/boost/thread/thread_functors.hpp
    boost/include/boost-1_55/boost/thread/thread_guard.hpp
    boost/include/boost-1_55/boost/thread/thread_only.hpp
    boost/include/boost-1_55/boost/thread/thread_time.hpp
    boost/include/boost-1_55/boost/thread/tss.hpp
    boost/include/boost-1_55/boost/thread/xtime.hpp
    boost/include/boost-1_55/boost/aligned_storage.hpp
    boost/include/boost-1_55/boost/any.hpp
    boost/include/boost-1_55/boost/array.hpp
    boost/include/boost-1_55/boost/asio.hpp
    boost/include/boost-1_55/boost/assert.hpp
    boost/include/boost-1_55/boost/assign.hpp
    boost/include/boost-1_55/boost/atomic.hpp
    boost/include/boost-1_55/boost/bimap.hpp
    boost/include/boost-1_55/boost/bind.hpp
    boost/include/boost-1_55/boost/blank.hpp
    boost/include/boost-1_55/boost/blank_fwd.hpp
    boost/include/boost-1_55/boost/call_traits.hpp
    boost/include/boost-1_55/boost/cast.hpp
    boost/include/boost-1_55/boost/cerrno.hpp
    boost/include/boost-1_55/boost/checked_delete.hpp
    boost/include/boost-1_55/boost/chrono.hpp
    boost/include/boost-1_55/boost/circular_buffer.hpp
    boost/include/boost-1_55/boost/circular_buffer_fwd.hpp
    boost/include/boost-1_55/boost/compressed_pair.hpp
    boost/include/boost-1_55/boost/concept_archetype.hpp
    boost/include/boost-1_55/boost/concept_check.hpp
    boost/include/boost-1_55/boost/config.hpp
    boost/include/boost-1_55/boost/crc.hpp
    boost/include/boost-1_55/boost/cregex.hpp
    boost/include/boost-1_55/boost/cstdint.hpp
    boost/include/boost-1_55/boost/cstdlib.hpp
    boost/include/boost-1_55/boost/current_function.hpp
    boost/include/boost-1_55/boost/date_time.hpp
    boost/include/boost-1_55/boost/dynamic_bitset.hpp
    boost/include/boost-1_55/boost/dynamic_bitset_fwd.hpp
    boost/include/boost-1_55/boost/enable_shared_from_this.hpp
    boost/include/boost-1_55/boost/exception.hpp
    boost/include/boost-1_55/boost/exception_ptr.hpp
    boost/include/boost-1_55/boost/filesystem.hpp
    boost/include/boost-1_55/boost/flyweight.hpp
    boost/include/boost-1_55/boost/foreach.hpp
    boost/include/boost-1_55/boost/foreach_fwd.hpp
    boost/include/boost-1_55/boost/format.hpp
    boost/include/boost-1_55/boost/function.hpp
    boost/include/boost-1_55/boost/function_equal.hpp
    boost/include/boost-1_55/boost/function_output_iterator.hpp
    boost/include/boost-1_55/boost/functional.hpp
    boost/include/boost-1_55/boost/generator_iterator.hpp
    boost/include/boost-1_55/boost/geometry.hpp
    boost/include/boost-1_55/boost/get_pointer.hpp
    boost/include/boost-1_55/boost/implicit_cast.hpp
    boost/include/boost-1_55/boost/indirect_reference.hpp
    boost/include/boost-1_55/boost/integer.hpp
    boost/include/boost-1_55/boost/integer_fwd.hpp
    boost/include/boost-1_55/boost/integer_traits.hpp
    boost/include/boost-1_55/boost/intrusive_ptr.hpp
    boost/include/boost-1_55/boost/io_fwd.hpp
    boost/include/boost-1_55/boost/is_placeholder.hpp
    boost/include/boost-1_55/boost/iterator.hpp
    boost/include/boost-1_55/boost/iterator_adaptors.hpp
    boost/include/boost-1_55/boost/last_value.hpp
    boost/include/boost-1_55/boost/lexical_cast.hpp
    boost/include/boost-1_55/boost/limits.hpp
    boost/include/boost-1_55/boost/local_function.hpp
    boost/include/boost-1_55/boost/locale.hpp
    boost/include/boost-1_55/boost/make_shared.hpp
    boost/include/boost-1_55/boost/math_fwd.hpp
    boost/include/boost-1_55/boost/mem_fn.hpp
    boost/include/boost-1_55/boost/memory_order.hpp
    boost/include/boost-1_55/boost/mpi.hpp
    boost/include/boost-1_55/boost/multi_array.hpp
    boost/include/boost-1_55/boost/multi_index_container.hpp
    boost/include/boost-1_55/boost/multi_index_container_fwd.hpp
    boost/include/boost-1_55/boost/next_prior.hpp
    boost/include/boost-1_55/boost/non_type.hpp
    boost/include/boost-1_55/boost/noncopyable.hpp
    boost/include/boost-1_55/boost/nondet_random.hpp
    boost/include/boost-1_55/boost/none.hpp
    boost/include/boost-1_55/boost/none_t.hpp
    boost/include/boost-1_55/boost/operators.hpp
    boost/include/boost-1_55/boost/optional.hpp
    boost/include/boost-1_55/boost/parameter.hpp
    boost/include/boost-1_55/boost/phoenix.hpp
    boost/include/boost-1_55/boost/pointee.hpp
    boost/include/boost-1_55/boost/pointer_cast.hpp
    boost/include/boost-1_55/boost/pointer_to_other.hpp
    boost/include/boost-1_55/boost/predef.h
    boost/include/boost-1_55/boost/preprocessor.hpp
    boost/include/boost-1_55/boost/program_options.hpp
    boost/include/boost-1_55/boost/progress.hpp
    boost/include/boost-1_55/boost/python.hpp
    boost/include/boost-1_55/boost/random.hpp
    boost/include/boost-1_55/boost/range.hpp
    boost/include/boost-1_55/boost/ratio.hpp
    boost/include/boost-1_55/boost/rational.hpp
    boost/include/boost-1_55/boost/ref.hpp
    boost/include/boost-1_55/boost/regex.h
    boost/include/boost-1_55/boost/regex.hpp
    boost/include/boost-1_55/boost/regex_fwd.hpp
    boost/include/boost-1_55/boost/scope_exit.hpp
    boost/include/boost-1_55/boost/scoped_array.hpp
    boost/include/boost-1_55/boost/scoped_ptr.hpp
    boost/include/boost-1_55/boost/shared_array.hpp
    boost/include/boost-1_55/boost/shared_container_iterator.hpp
    boost/include/boost-1_55/boost/shared_ptr.hpp
    boost/include/boost-1_55/boost/signal.hpp
    boost/include/boost-1_55/boost/signals.hpp
    boost/include/boost-1_55/boost/signals2.hpp
    boost/include/boost-1_55/boost/smart_ptr.hpp
    boost/include/boost-1_55/boost/spirit.hpp
    boost/include/boost-1_55/boost/static_assert.hpp
    boost/include/boost-1_55/boost/strong_typedef.hpp
    boost/include/boost-1_55/boost/swap.hpp
    boost/include/boost-1_55/boost/thread.hpp
    boost/include/boost-1_55/boost/throw_exception.hpp
    boost/include/boost-1_55/boost/timer.hpp
    boost/include/boost-1_55/boost/token_functions.hpp
    boost/include/boost-1_55/boost/token_iterator.hpp
    boost/include/boost-1_55/boost/tokenizer.hpp
    boost/include/boost-1_55/boost/type.hpp
    boost/include/boost-1_55/boost/type_traits.hpp
    boost/include/boost-1_55/boost/unordered_map.hpp
    boost/include/boost-1_55/boost/unordered_set.hpp
    boost/include/boost-1_55/boost/utility.hpp
    boost/include/boost-1_55/boost/variant.hpp
    boost/include/boost-1_55/boost/version.hpp
    boost/include/boost-1_55/boost/visit_each.hpp
    boost/include/boost-1_55/boost/wave.hpp
    boost/include/boost-1_55/boost/weak_ptr.hpp
    cegui/include/CEGUI/CommonDialogs/ColourPicker/ColourPicker.h
    cegui/include/CEGUI/CommonDialogs/ColourPicker/Controls.h
    cegui/include/CEGUI/CommonDialogs/ColourPicker/Conversions.h
    cegui/include/CEGUI/CommonDialogs/ColourPicker/Types.h
    cegui/include/CEGUI/CommonDialogs/Module.h
    cegui/include/CEGUI/falagard/ComponentBase.h
    cegui/include/CEGUI/falagard/Dimensions.h
    cegui/include/CEGUI/falagard/Enums.h
    cegui/include/CEGUI/falagard/EventAction.h
    cegui/include/CEGUI/falagard/EventLinkDefinition.h
    cegui/include/CEGUI/falagard/FalagardPropertyBase.h
    cegui/include/CEGUI/falagard/FormattingSetting.h
    cegui/include/CEGUI/falagard/FrameComponent.h
    cegui/include/CEGUI/falagard/ImageryComponent.h
    cegui/include/CEGUI/falagard/ImagerySection.h
    cegui/include/CEGUI/falagard/LayerSpecification.h
    cegui/include/CEGUI/falagard/NamedArea.h
    cegui/include/CEGUI/falagard/NamedDefinitionCollator.h
    cegui/include/CEGUI/falagard/PropertyDefinition.h
    cegui/include/CEGUI/falagard/PropertyDefinitionBase.h
    cegui/include/CEGUI/falagard/PropertyInitialiser.h
    cegui/include/CEGUI/falagard/PropertyLinkDefinition.h
    cegui/include/CEGUI/falagard/SectionSpecification.h
    cegui/include/CEGUI/falagard/StateImagery.h
    cegui/include/CEGUI/falagard/TextComponent.h
    cegui/include/CEGUI/falagard/WidgetComponent.h
    cegui/include/CEGUI/falagard/WidgetLookFeel.h
    cegui/include/CEGUI/falagard/WidgetLookManager.h
    cegui/include/CEGUI/falagard/XMLEnumHelper.h
    cegui/include/CEGUI/falagard/XMLHandler.h
    cegui/include/CEGUI/ImageCodecModules/Corona/ImageCodec.h
    cegui/include/CEGUI/ImageCodecModules/Corona/ImageCodecModule.h
    cegui/include/CEGUI/ImageCodecModules/DevIL/ImageCodec.h
    cegui/include/CEGUI/ImageCodecModules/DevIL/ImageCodecModule.h
    cegui/include/CEGUI/ImageCodecModules/FreeImage/ImageCodec.h
    cegui/include/CEGUI/ImageCodecModules/FreeImage/ImageCodecModule.h
    cegui/include/CEGUI/ImageCodecModules/PVR/ImageCodec.h
    cegui/include/CEGUI/ImageCodecModules/PVR/ImageCodecModule.h
    cegui/include/CEGUI/ImageCodecModules/SILLY/ImageCodec.h
    cegui/include/CEGUI/ImageCodecModules/SILLY/ImageCodecModule.h
    cegui/include/CEGUI/ImageCodecModules/STB/ImageCodec.h
    cegui/include/CEGUI/ImageCodecModules/STB/ImageCodecModule.h
    cegui/include/CEGUI/ImageCodecModules/TGA/ImageCodec.h
    cegui/include/CEGUI/ImageCodecModules/TGA/ImageCodecModule.h
    cegui/include/CEGUI/RendererModules/Direct3D10/GeometryBuffer.h
    cegui/include/CEGUI/RendererModules/Direct3D10/Renderer.h
    cegui/include/CEGUI/RendererModules/Direct3D10/RenderTarget.h
    cegui/include/CEGUI/RendererModules/Direct3D10/Texture.h
    cegui/include/CEGUI/RendererModules/Direct3D10/TextureTarget.h
    cegui/include/CEGUI/RendererModules/Direct3D10/ViewportTarget.h
    cegui/include/CEGUI/RendererModules/Direct3D11/GeometryBuffer.h
    cegui/include/CEGUI/RendererModules/Direct3D11/Renderer.h
    cegui/include/CEGUI/RendererModules/Direct3D11/RenderTarget.h
    cegui/include/CEGUI/RendererModules/Direct3D11/Texture.h
    cegui/include/CEGUI/RendererModules/Direct3D11/TextureTarget.h
    cegui/include/CEGUI/RendererModules/Direct3D11/ViewportTarget.h
    cegui/include/CEGUI/RendererModules/Direct3D9/GeometryBuffer.h
    cegui/include/CEGUI/RendererModules/Direct3D9/Renderer.h
    cegui/include/CEGUI/RendererModules/Direct3D9/RenderTarget.h
    cegui/include/CEGUI/RendererModules/Direct3D9/Texture.h
    cegui/include/CEGUI/RendererModules/Direct3D9/TextureTarget.h
    cegui/include/CEGUI/RendererModules/Direct3D9/ViewportTarget.h
    cegui/include/CEGUI/RendererModules/DirectFB/GeometryBuffer.h
    cegui/include/CEGUI/RendererModules/DirectFB/Renderer.h
    cegui/include/CEGUI/RendererModules/DirectFB/RenderTarget.h
    cegui/include/CEGUI/RendererModules/DirectFB/Texture.h
    cegui/include/CEGUI/RendererModules/Irrlicht/EventPusher.h
    cegui/include/CEGUI/RendererModules/Irrlicht/GeometryBuffer.h
    cegui/include/CEGUI/RendererModules/Irrlicht/ImageCodec.h
    cegui/include/CEGUI/RendererModules/Irrlicht/MemoryFile.h
    cegui/include/CEGUI/RendererModules/Irrlicht/Renderer.h
    cegui/include/CEGUI/RendererModules/Irrlicht/RendererDef.h
    cegui/include/CEGUI/RendererModules/Irrlicht/RenderTarget.h
    cegui/include/CEGUI/RendererModules/Irrlicht/ResourceProvider.h
    cegui/include/CEGUI/RendererModules/Irrlicht/Texture.h
    cegui/include/CEGUI/RendererModules/Irrlicht/TextureTarget.h
    cegui/include/CEGUI/RendererModules/Irrlicht/WindowTarget.h
    cegui/include/CEGUI/RendererModules/Null/GeometryBuffer.h
    cegui/include/CEGUI/RendererModules/Null/Renderer.h
    cegui/include/CEGUI/RendererModules/Null/RenderTarget.h
    cegui/include/CEGUI/RendererModules/Null/Texture.h
    cegui/include/CEGUI/RendererModules/Null/TextureTarget.h
    cegui/include/CEGUI/RendererModules/Ogre/GeometryBuffer.h
    cegui/include/CEGUI/RendererModules/Ogre/ImageCodec.h
    cegui/include/CEGUI/RendererModules/Ogre/Renderer.h
    cegui/include/CEGUI/RendererModules/Ogre/RenderTarget.h
    cegui/include/CEGUI/RendererModules/Ogre/ResourceProvider.h
    cegui/include/CEGUI/RendererModules/Ogre/Texture.h
    cegui/include/CEGUI/RendererModules/Ogre/TextureTarget.h
    cegui/include/CEGUI/RendererModules/Ogre/WindowTarget.h
    cegui/include/CEGUI/RendererModules/OpenGL/ApplePBTextureTarget.h
    cegui/include/CEGUI/RendererModules/OpenGL/GeometryBufferBase.h
    cegui/include/CEGUI/RendererModules/OpenGL/GL.h
    cegui/include/CEGUI/RendererModules/OpenGL/GL3FBOTextureTarget.h
    cegui/include/CEGUI/RendererModules/OpenGL/GL3GeometryBuffer.h
    cegui/include/CEGUI/RendererModules/OpenGL/GL3Renderer.h
    cegui/include/CEGUI/RendererModules/OpenGL/GLFBOTextureTarget.h
    cegui/include/CEGUI/RendererModules/OpenGL/GLGeometryBuffer.h
    cegui/include/CEGUI/RendererModules/OpenGL/GlmPimpl.h
    cegui/include/CEGUI/RendererModules/OpenGL/GLRenderer.h
    cegui/include/CEGUI/RendererModules/OpenGL/GLXPBTextureTarget.h
    cegui/include/CEGUI/RendererModules/OpenGL/RendererBase.h
    cegui/include/CEGUI/RendererModules/OpenGL/RenderTarget.h
    cegui/include/CEGUI/RendererModules/OpenGL/Shader.h
    cegui/include/CEGUI/RendererModules/OpenGL/ShaderManager.h
    cegui/include/CEGUI/RendererModules/OpenGL/StandardShaderFrag.h
    cegui/include/CEGUI/RendererModules/OpenGL/StandardShaderVert.h
    cegui/include/CEGUI/RendererModules/OpenGL/StateChangeWrapper.h
    cegui/include/CEGUI/RendererModules/OpenGL/Texture.h
    cegui/include/CEGUI/RendererModules/OpenGL/TextureTarget.h
    cegui/include/CEGUI/RendererModules/OpenGL/ViewportTarget.h
    cegui/include/CEGUI/RendererModules/OpenGL/WGLPBTextureTarget.h
    cegui/include/CEGUI/RendererModules/OpenGLES/FBOTextureTarget.h
    cegui/include/CEGUI/RendererModules/OpenGLES/GeometryBuffer.h
    cegui/include/CEGUI/RendererModules/OpenGLES/GLES.h
    cegui/include/CEGUI/RendererModules/OpenGLES/Renderer.h
    cegui/include/CEGUI/RendererModules/OpenGLES/RenderTarget.h
    cegui/include/CEGUI/RendererModules/OpenGLES/Texture.h
    cegui/include/CEGUI/RendererModules/OpenGLES/ViewportTarget.h
    cegui/include/CEGUI/ScriptModules/Lua/Functor.h
    cegui/include/CEGUI/ScriptModules/Lua/ScriptModule.h
    cegui/include/CEGUI/widgets/All.h
    cegui/include/CEGUI/widgets/ButtonBase.h
    cegui/include/CEGUI/widgets/ClippedContainer.h
    cegui/include/CEGUI/widgets/Combobox.h
    cegui/include/CEGUI/widgets/ComboDropList.h
    cegui/include/CEGUI/widgets/DefaultWindow.h
    cegui/include/CEGUI/widgets/DragContainer.h
    cegui/include/CEGUI/widgets/Editbox.h
    cegui/include/CEGUI/widgets/FrameWindow.h
    cegui/include/CEGUI/widgets/GridLayoutContainer.h
    cegui/include/CEGUI/widgets/GroupBox.h
    cegui/include/CEGUI/widgets/HorizontalLayoutContainer.h
    cegui/include/CEGUI/widgets/ItemEntry.h
    cegui/include/CEGUI/widgets/ItemListBase.h
    cegui/include/CEGUI/widgets/ItemListbox.h
    cegui/include/CEGUI/widgets/LayoutCell.h
    cegui/include/CEGUI/widgets/LayoutContainer.h
    cegui/include/CEGUI/widgets/Listbox.h
    cegui/include/CEGUI/widgets/ListboxItem.h
    cegui/include/CEGUI/widgets/ListboxTextItem.h
    cegui/include/CEGUI/widgets/ListHeader.h
    cegui/include/CEGUI/widgets/ListHeaderSegment.h
    cegui/include/CEGUI/widgets/Menubar.h
    cegui/include/CEGUI/widgets/MenuBase.h
    cegui/include/CEGUI/widgets/MenuItem.h
    cegui/include/CEGUI/widgets/MultiColumnList.h
    cegui/include/CEGUI/widgets/MultiLineEditbox.h
    cegui/include/CEGUI/widgets/PopupMenu.h
    cegui/include/CEGUI/widgets/ProgressBar.h
    cegui/include/CEGUI/widgets/PushButton.h
    cegui/include/CEGUI/widgets/RadioButton.h
    cegui/include/CEGUI/widgets/ScrollablePane.h
    cegui/include/CEGUI/widgets/Scrollbar.h
    cegui/include/CEGUI/widgets/ScrolledContainer.h
    cegui/include/CEGUI/widgets/ScrolledItemListBase.h
    cegui/include/CEGUI/widgets/SequentialLayoutContainer.h
    cegui/include/CEGUI/widgets/Slider.h
    cegui/include/CEGUI/widgets/Spinner.h
    cegui/include/CEGUI/widgets/TabButton.h
    cegui/include/CEGUI/widgets/TabControl.h
    cegui/include/CEGUI/widgets/Thumb.h
    cegui/include/CEGUI/widgets/Titlebar.h
    cegui/include/CEGUI/widgets/ToggleButton.h
    cegui/include/CEGUI/widgets/Tooltip.h
    cegui/include/CEGUI/widgets/Tree.h
    cegui/include/CEGUI/widgets/TreeItem.h
    cegui/include/CEGUI/widgets/VerticalLayoutContainer.h
    cegui/include/CEGUI/WindowRendererSets/Core/Button.h
    cegui/include/CEGUI/WindowRendererSets/Core/Default.h
    cegui/include/CEGUI/WindowRendererSets/Core/Editbox.h
    cegui/include/CEGUI/WindowRendererSets/Core/FrameWindow.h
    cegui/include/CEGUI/WindowRendererSets/Core/ItemEntry.h
    cegui/include/CEGUI/WindowRendererSets/Core/ItemListbox.h
    cegui/include/CEGUI/WindowRendererSets/Core/Listbox.h
    cegui/include/CEGUI/WindowRendererSets/Core/ListHeader.h
    cegui/include/CEGUI/WindowRendererSets/Core/ListHeaderSegment.h
    cegui/include/CEGUI/WindowRendererSets/Core/Menubar.h
    cegui/include/CEGUI/WindowRendererSets/Core/MenuItem.h
    cegui/include/CEGUI/WindowRendererSets/Core/Module.h
    cegui/include/CEGUI/WindowRendererSets/Core/MultiColumnList.h
    cegui/include/CEGUI/WindowRendererSets/Core/MultiLineEditbox.h
    cegui/include/CEGUI/WindowRendererSets/Core/PopupMenu.h
    cegui/include/CEGUI/WindowRendererSets/Core/ProgressBar.h
    cegui/include/CEGUI/WindowRendererSets/Core/ScrollablePane.h
    cegui/include/CEGUI/WindowRendererSets/Core/Scrollbar.h
    cegui/include/CEGUI/WindowRendererSets/Core/Slider.h
    cegui/include/CEGUI/WindowRendererSets/Core/Static.h
    cegui/include/CEGUI/WindowRendererSets/Core/StaticImage.h
    cegui/include/CEGUI/WindowRendererSets/Core/StaticText.h
    cegui/include/CEGUI/WindowRendererSets/Core/TabButton.h
    cegui/include/CEGUI/WindowRendererSets/Core/TabControl.h
    cegui/include/CEGUI/WindowRendererSets/Core/Titlebar.h
    cegui/include/CEGUI/WindowRendererSets/Core/ToggleButton.h
    cegui/include/CEGUI/WindowRendererSets/Core/Tooltip.h
    cegui/include/CEGUI/WindowRendererSets/Core/Tree.h
    cegui/include/CEGUI/XMLParserModules/Expat/XMLParser.h
    cegui/include/CEGUI/XMLParserModules/Expat/XMLParserModule.h
    cegui/include/CEGUI/XMLParserModules/Libxml2/XMLParser.h
    cegui/include/CEGUI/XMLParserModules/Libxml2/XMLParserModule.h
    cegui/include/CEGUI/XMLParserModules/RapidXML/XMLParser.h
    cegui/include/CEGUI/XMLParserModules/RapidXML/XMLParserModule.h
    cegui/include/CEGUI/XMLParserModules/TinyXML/XMLParser.h
    cegui/include/CEGUI/XMLParserModules/TinyXML/XMLParserModule.h
    cegui/include/CEGUI/XMLParserModules/Xerces/XMLParser.h
    cegui/include/CEGUI/XMLParserModules/Xerces/XMLParserModule.h
    cegui/include/CEGUI/XMLParserModules/Xerces/XMLParserProperties.h
    cegui/include/CEGUI/Affector.h
    cegui/include/CEGUI/Animation.h
    cegui/include/CEGUI/Animation_xmlHandler.h
    cegui/include/CEGUI/AnimationInstance.h
    cegui/include/CEGUI/AnimationManager.h
    cegui/include/CEGUI/Base.h
    cegui/include/CEGUI/BasicImage.h
    cegui/include/CEGUI/BasicRenderedStringParser.h
    cegui/include/CEGUI/BidiVisualMapping.h
    cegui/include/CEGUI/BoundSlot.h
    cegui/include/CEGUI/CEGUI.h
    cegui/include/CEGUI/CentredRenderedString.h
    cegui/include/CEGUI/ChainedXMLHandler.h
    cegui/include/CEGUI/Clipboard.h
    cegui/include/CEGUI/Colour.h
    cegui/include/CEGUI/ColourRect.h
    cegui/include/CEGUI/CompositeResourceProvider.h
    cegui/include/CEGUI/Config.h
    cegui/include/CEGUI/Config_xmlHandler.h
    cegui/include/CEGUI/CoordConverter.h
    cegui/include/CEGUI/DataContainer.h
    cegui/include/CEGUI/DefaultLogger.h
    cegui/include/CEGUI/DefaultRenderedStringParser.h
    cegui/include/CEGUI/DefaultResourceProvider.h
    cegui/include/CEGUI/DynamicModule.h
    cegui/include/CEGUI/Element.h
    cegui/include/CEGUI/Event.h
    cegui/include/CEGUI/EventArgs.h
    cegui/include/CEGUI/EventSet.h
    cegui/include/CEGUI/Exceptions.h
    cegui/include/CEGUI/FactoryModule.h
    cegui/include/CEGUI/FactoryRegisterer.h
    cegui/include/CEGUI/Font.h
    cegui/include/CEGUI/Font_xmlHandler.h
    cegui/include/CEGUI/FontGlyph.h
    cegui/include/CEGUI/FontManager.h
    cegui/include/CEGUI/FormattedRenderedString.h
    cegui/include/CEGUI/ForwardRefs.h
    cegui/include/CEGUI/FreeFunctionSlot.h
    cegui/include/CEGUI/FreeTypeFont.h
    cegui/include/CEGUI/FribidiVisualMapping.h
    cegui/include/CEGUI/FunctorCopySlot.h
    cegui/include/CEGUI/FunctorPointerSlot.h
    cegui/include/CEGUI/FunctorReferenceBinder.h
    cegui/include/CEGUI/FunctorReferenceSlot.h
    cegui/include/CEGUI/GeometryBuffer.h
    cegui/include/CEGUI/GlobalEventSet.h
    cegui/include/CEGUI/GUIContext.h
    cegui/include/CEGUI/GUILayout_xmlHandler.h
    cegui/include/CEGUI/IconvStringTranscoder.h
    cegui/include/CEGUI/Image.h
    cegui/include/CEGUI/ImageCodec.h
    cegui/include/CEGUI/ImageFactory.h
    cegui/include/CEGUI/ImageManager.h
    cegui/include/CEGUI/InjectedInputReceiver.h
    cegui/include/CEGUI/InputEvent.h
    cegui/include/CEGUI/Interpolator.h
    cegui/include/CEGUI/IteratorBase.h
    cegui/include/CEGUI/JustifiedRenderedString.h
    cegui/include/CEGUI/KeyFrame.h
    cegui/include/CEGUI/LeftAlignedRenderedString.h
    cegui/include/CEGUI/LinkedEvent.h
    cegui/include/CEGUI/Logger.h
    cegui/include/CEGUI/MemberFunctionSlot.h
    cegui/include/CEGUI/MemoryAllocatedObject.h
    cegui/include/CEGUI/MemoryAllocation.h
    cegui/include/CEGUI/MemoryOgreAllocator.h
    cegui/include/CEGUI/MemoryStdAllocator.h
    cegui/include/CEGUI/MemorySTLWrapper.h
    cegui/include/CEGUI/MinibidiVisualMapping.h
    cegui/include/CEGUI/MinizipResourceProvider.h
    cegui/include/CEGUI/ModuleConfig.h
    cegui/include/CEGUI/MouseCursor.h
    cegui/include/CEGUI/NamedElement.h
    cegui/include/CEGUI/NamedXMLResourceManager.h
    cegui/include/CEGUI/PCRERegexMatcher.h
    cegui/include/CEGUI/PixmapFont.h
    cegui/include/CEGUI/Property.h
    cegui/include/CEGUI/PropertyHelper.h
    cegui/include/CEGUI/PropertySet.h
    cegui/include/CEGUI/Quaternion.h
    cegui/include/CEGUI/Rect.h
    cegui/include/CEGUI/RefCounted.h
    cegui/include/CEGUI/RegexMatcher.h
    cegui/include/CEGUI/RenderedString.h
    cegui/include/CEGUI/RenderedStringComponent.h
    cegui/include/CEGUI/RenderedStringImageComponent.h
    cegui/include/CEGUI/RenderedStringParser.h
    cegui/include/CEGUI/RenderedStringTextComponent.h
    cegui/include/CEGUI/RenderedStringWidgetComponent.h
    cegui/include/CEGUI/RenderedStringWordWrapper.h
    cegui/include/CEGUI/RenderEffect.h
    cegui/include/CEGUI/RenderEffectFactory.h
    cegui/include/CEGUI/RenderEffectManager.h
    cegui/include/CEGUI/Renderer.h
    cegui/include/CEGUI/RenderingContext.h
    cegui/include/CEGUI/RenderingSurface.h
    cegui/include/CEGUI/RenderingWindow.h
    cegui/include/CEGUI/RenderQueue.h
    cegui/include/CEGUI/RenderTarget.h
    cegui/include/CEGUI/ResourceProvider.h
    cegui/include/CEGUI/RightAlignedRenderedString.h
    cegui/include/CEGUI/Scheme.h
    cegui/include/CEGUI/Scheme_xmlHandler.h
    cegui/include/CEGUI/SchemeManager.h
    cegui/include/CEGUI/ScriptModule.h
    cegui/include/CEGUI/SimpleTimer.h
    cegui/include/CEGUI/Singleton.h
    cegui/include/CEGUI/Size.h
    cegui/include/CEGUI/SlotFunctorBase.h
    cegui/include/CEGUI/String.h
    cegui/include/CEGUI/StringTranscoder.h
    cegui/include/CEGUI/SubscriberSlot.h
    cegui/include/CEGUI/System.h
    cegui/include/CEGUI/SystemKeys.h
    cegui/include/CEGUI/Texture.h
    cegui/include/CEGUI/TextureTarget.h
    cegui/include/CEGUI/TextUtils.h
    cegui/include/CEGUI/TplInterpolators.h
    cegui/include/CEGUI/TplProperty.h
    cegui/include/CEGUI/TplWindowFactory.h
    cegui/include/CEGUI/TplWindowFactoryRegisterer.h
    cegui/include/CEGUI/TplWindowProperty.h
    cegui/include/CEGUI/TplWindowRendererFactory.h
    cegui/include/CEGUI/TplWindowRendererProperty.h
    cegui/include/CEGUI/TplWRFactoryRegisterer.h
    cegui/include/CEGUI/TypedProperty.h
    cegui/include/CEGUI/UDim.h
    cegui/include/CEGUI/Vector.h
    cegui/include/CEGUI/Version.h
    cegui/include/CEGUI/Vertex.h
    cegui/include/CEGUI/Win32StringTranscoder.h
    cegui/include/CEGUI/Window.h
    cegui/include/CEGUI/WindowFactory.h
    cegui/include/CEGUI/WindowFactoryManager.h
    cegui/include/CEGUI/WindowManager.h
    cegui/include/CEGUI/WindowRenderer.h
    cegui/include/CEGUI/WindowRendererManager.h
    cegui/include/CEGUI/XMLAttributes.h
    cegui/include/CEGUI/XMLHandler.h
    cegui/include/CEGUI/XMLParser.h
    cegui/include/CEGUI/XMLSerializer.h
    cegui/include/freetype/config/ftconfig.h
    cegui/include/freetype/config/ftheader.h
    cegui/include/freetype/config/ftmodule.h
    cegui/include/freetype/config/ftoption.h
    cegui/include/freetype/config/ftstdlib.h
    cegui/include/freetype/internal/services/svbdf.h
    cegui/include/freetype/internal/services/svcid.h
    cegui/include/freetype/internal/services/svgldict.h
    cegui/include/freetype/internal/services/svgxval.h
    cegui/include/freetype/internal/services/svkern.h
    cegui/include/freetype/internal/services/svmm.h
    cegui/include/freetype/internal/services/svotval.h
    cegui/include/freetype/internal/services/svpfr.h
    cegui/include/freetype/internal/services/svpostnm.h
    cegui/include/freetype/internal/services/svpscmap.h
    cegui/include/freetype/internal/services/svpsinfo.h
    cegui/include/freetype/internal/services/svsfnt.h
    cegui/include/freetype/internal/services/svttcmap.h
    cegui/include/freetype/internal/services/svtteng.h
    cegui/include/freetype/internal/services/svttglyf.h
    cegui/include/freetype/internal/services/svwinfnt.h
    cegui/include/freetype/internal/services/svxf86nm.h
    cegui/include/freetype/internal/autohint.h
    cegui/include/freetype/internal/ftcalc.h
    cegui/include/freetype/internal/ftdebug.h
    cegui/include/freetype/internal/ftdriver.h
    cegui/include/freetype/internal/ftgloadr.h
    cegui/include/freetype/internal/ftmemory.h
    cegui/include/freetype/internal/ftobjs.h
    cegui/include/freetype/internal/ftpic.h
    cegui/include/freetype/internal/ftrfork.h
    cegui/include/freetype/internal/ftserv.h
    cegui/include/freetype/internal/ftstream.h
    cegui/include/freetype/internal/fttrace.h
    cegui/include/freetype/internal/ftvalid.h
    cegui/include/freetype/internal/internal.h
    cegui/include/freetype/internal/pcftypes.h
    cegui/include/freetype/internal/psaux.h
    cegui/include/freetype/internal/pshints.h
    cegui/include/freetype/internal/sfnt.h
    cegui/include/freetype/internal/t1types.h
    cegui/include/freetype/internal/tttypes.h
    cegui/include/freetype/freetype.h
    cegui/include/freetype/ftadvanc.h
    cegui/include/freetype/ftbbox.h
    cegui/include/freetype/ftbdf.h
    cegui/include/freetype/ftbitmap.h
    cegui/include/freetype/ftcache.h
    cegui/include/freetype/ftchapters.h
    cegui/include/freetype/ftcid.h
    cegui/include/freetype/fterrdef.h
    cegui/include/freetype/fterrors.h
    cegui/include/freetype/ftgasp.h
    cegui/include/freetype/ftglyph.h
    cegui/include/freetype/ftgxval.h
    cegui/include/freetype/ftgzip.h
    cegui/include/freetype/ftimage.h
    cegui/include/freetype/ftincrem.h
    cegui/include/freetype/ftlcdfil.h
    cegui/include/freetype/ftlist.h
    cegui/include/freetype/ftlzw.h
    cegui/include/freetype/ftmac.h
    cegui/include/freetype/ftmm.h
    cegui/include/freetype/ftmodapi.h
    cegui/include/freetype/ftmoderr.h
    cegui/include/freetype/ftotval.h
    cegui/include/freetype/ftoutln.h
    cegui/include/freetype/ftpfr.h
    cegui/include/freetype/ftrender.h
    cegui/include/freetype/ftsizes.h
    cegui/include/freetype/ftsnames.h
    cegui/include/freetype/ftstroke.h
    cegui/include/freetype/ftsynth.h
    cegui/include/freetype/ftsystem.h
    cegui/include/freetype/fttrigon.h
    cegui/include/freetype/fttypes.h
    cegui/include/freetype/ftwinfnt.h
    cegui/include/freetype/ftxf86.h
    cegui/include/freetype/t1tables.h
    cegui/include/freetype/ttnameid.h
    cegui/include/freetype/tttables.h
    cegui/include/freetype/tttags.h
    cegui/include/freetype/ttunpat.h
    cegui/include/FreeImage.h
    cegui/include/ft2build.h
    cegui/include/iconv.h
    cegui/include/tinystr.h
    cegui/include/tinyxml.h
    libintl-lite/include/libintl.h
    makefiles/MSVC7.1/resource.h
    makefiles/MSVC8.0/resource.h
    makefiles/MSVC9.0/resource.h
    SDL2/include/begin_code.h
    SDL2/include/close_code.h
    SDL2/include/SDL.h
    SDL2/include/SDL_assert.h
    SDL2/include/SDL_atomic.h
    SDL2/include/SDL_audio.h
    SDL2/include/SDL_bits.h
    SDL2/include/SDL_blendmode.h
    SDL2/include/SDL_clipboard.h
    SDL2/include/SDL_config.h
    SDL2/include/SDL_config_android.h
    SDL2/include/SDL_config_iphoneos.h
    SDL2/include/SDL_config_macosx.h
    SDL2/include/SDL_config_minimal.h
    SDL2/include/SDL_config_pandora.h
    SDL2/include/SDL_config_psp.h
    SDL2/include/SDL_config_windows.h
    SDL2/include/SDL_config_winrt.h
    SDL2/include/SDL_config_wiz.h
    SDL2/include/SDL_copying.h
    SDL2/include/SDL_cpuinfo.h
    SDL2/include/SDL_egl.h
    SDL2/include/SDL_endian.h
    SDL2/include/SDL_error.h
    SDL2/include/SDL_events.h
    SDL2/include/SDL_filesystem.h
    SDL2/include/SDL_gamecontroller.h
    SDL2/include/SDL_gesture.h
    SDL2/include/SDL_haptic.h
    SDL2/include/SDL_hints.h
    SDL2/include/SDL_joystick.h
    SDL2/include/SDL_keyboard.h
    SDL2/include/SDL_keycode.h
    SDL2/include/SDL_loadso.h
    SDL2/include/SDL_log.h
    SDL2/include/SDL_main.h
    SDL2/include/SDL_messagebox.h
    SDL2/include/SDL_mouse.h
    SDL2/include/SDL_mutex.h
    SDL2/include/SDL_name.h
    SDL2/include/SDL_opengl.h
    SDL2/include/SDL_opengles.h
    SDL2/include/SDL_opengles2.h
    SDL2/include/SDL_pixels.h
    SDL2/include/SDL_platform.h
    SDL2/include/SDL_power.h
    SDL2/include/SDL_quit.h
    SDL2/include/SDL_rect.h
    SDL2/include/SDL_render.h
    SDL2/include/SDL_revision.h
    SDL2/include/SDL_rwops.h
    SDL2/include/SDL_scancode.h
    SDL2/include/SDL_shape.h
    SDL2/include/SDL_stdinc.h
    SDL2/include/SDL_surface.h
    SDL2/include/SDL_system.h
    SDL2/include/SDL_syswm.h
    SDL2/include/SDL_test.h
    SDL2/include/SDL_test_assert.h
    SDL2/include/SDL_test_common.h
    SDL2/include/SDL_test_compare.h
    SDL2/include/SDL_test_crc32.h
    SDL2/include/SDL_test_font.h
    SDL2/include/SDL_test_fuzzer.h
    SDL2/include/SDL_test_harness.h
    SDL2/include/SDL_test_images.h
    SDL2/include/SDL_test_log.h
    SDL2/include/SDL_test_md5.h
    SDL2/include/SDL_test_random.h
    SDL2/include/SDL_thread.h
    SDL2/include/SDL_timer.h
    SDL2/include/SDL_touch.h
    SDL2/include/SDL_types.h
    SDL2/include/SDL_version.h
    SDL2/include/SDL_video.h
    SDL2_image/include/SDL_image.h
    SDL2_mixer/include/SDL_mixer.h
    SDL2_ttf/include/SDL_ttf.h
    src/audio/audio.cpp
    src/audio/audio.h
    src/audio/random_sound.cpp
    src/audio/random_sound.h
    src/audio/sound_manager.cpp
    src/audio/sound_manager.h
    src/core/filesystem/filesystem.cpp
    src/core/filesystem/filesystem.h
    src/core/filesystem/resource_manager.cpp
    src/core/filesystem/resource_manager.h
    src/core/math/line.h
    src/core/math/point.h
    src/core/math/rect.h
    src/core/math/size.h
    src/core/math/utilities.cpp
    src/core/math/utilities.h
    src/core/math/vector.cpp
    src/core/math/vector.h
    src/core/camera.cpp
    src/core/camera.h
    src/core/campaign_manager.cpp
    src/core/campaign_manager.h
    src/core/collision.cpp
    src/core/collision.h
    src/core/editor.cpp
    src/core/editor.h
    src/core/file_parser.cpp
    src/core/file_parser.h
    src/core/framerate.cpp
    src/core/framerate.h
    src/core/game_core.cpp
    src/core/game_core.h
    src/core/global_basic.h
    src/core/global_game.h
    src/core/i18n.cpp
    src/core/i18n.h
    src/core/main.cpp
    src/core/main.h
    src/core/obj_manager.h
    src/core/property_helper.cpp
    src/core/property_helper.h
    src/core/sprite_manager.cpp
    src/core/sprite_manager.h
    src/enemies/bosses/turtle_boss.cpp
    src/enemies/bosses/turtle_boss.h
    src/enemies/eato.cpp
    src/enemies/eato.h
    src/enemies/enemy.cpp
    src/enemies/enemy.h
    src/enemies/flyon.cpp
    src/enemies/flyon.h
    src/enemies/furball.cpp
    src/enemies/furball.h
    src/enemies/gee.cpp
    src/enemies/gee.h
    src/enemies/krush.cpp
    src/enemies/krush.h
    src/enemies/rokko.cpp
    src/enemies/rokko.h
    src/enemies/spika.cpp
    src/enemies/spika.h
    src/enemies/spikeball.cpp
    src/enemies/spikeball.h
    src/enemies/static.cpp
    src/enemies/static.h
    src/enemies/thromp.cpp
    src/enemies/thromp.h
    src/enemies/turtle.cpp
    src/enemies/turtle.h
    src/gui/generic.cpp
    src/gui/generic.h
    src/gui/hud.cpp
    src/gui/hud.h
    src/gui/menu.cpp
    src/gui/menu.h
    src/gui/menu_data.cpp
    src/gui/menu_data.h
    src/gui/spinner.cpp
    src/gui/spinner.h
    src/input/joystick.cpp
    src/input/joystick.h
    src/input/keyboard.cpp
    src/input/keyboard.h
    src/input/mouse.cpp
    src/input/mouse.h
    src/level/level.cpp
    src/level/level.h
    src/level/level_background.cpp
    src/level/level_background.h
    src/level/level_editor.cpp
    src/level/level_editor.h
    src/level/level_manager.cpp
    src/level/level_manager.h
    src/level/level_player.cpp
    src/level/level_player.h
    src/level/level_settings.cpp
    src/level/level_settings.h
    src/objects/animated_sprite.cpp
    src/objects/animated_sprite.h
    src/objects/ball.cpp
    src/objects/ball.h
    src/objects/bonusbox.cpp
    src/objects/bonusbox.h
    src/objects/box.cpp
    src/objects/box.h
    src/objects/enemystopper.cpp
    src/objects/enemystopper.h
    src/objects/goldpiece.cpp
    src/objects/goldpiece.h
    src/objects/level_entry.cpp
    src/objects/level_entry.h
    src/objects/level_exit.cpp
    src/objects/level_exit.h
    src/objects/moving_platform.cpp
    src/objects/moving_platform.h
    src/objects/movingsprite.cpp
    src/objects/movingsprite.h
    src/objects/path.cpp
    src/objects/path.h
    src/objects/powerup.cpp
    src/objects/powerup.h
    src/objects/spinbox.cpp
    src/objects/spinbox.h
    src/objects/sprite.cpp
    src/objects/sprite.h
    src/objects/star.cpp
    src/objects/star.h
    src/objects/text_box.cpp
    src/objects/text_box.h
    src/overworld/overworld.cpp
    src/overworld/overworld.h
    src/overworld/world_editor.cpp
    src/overworld/world_editor.h
    src/overworld/world_layer.cpp
    src/overworld/world_layer.h
    src/overworld/world_manager.cpp
    src/overworld/world_manager.h
    src/overworld/world_player.cpp
    src/overworld/world_player.h
    src/overworld/world_sprite_manager.cpp
    src/overworld/world_sprite_manager.h
    src/overworld/world_waypoint.cpp
    src/overworld/world_waypoint.h
    src/user/preferences.cpp
    src/user/preferences.h
    src/user/savegame.cpp
    src/user/savegame.h
    src/video/animation.cpp
    src/video/animation.h
    src/video/color.h
    src/video/font.cpp
    src/video/font.h
    src/video/gl_surface.cpp
    src/video/gl_surface.h
    src/video/img_manager.cpp
    src/video/img_manager.h
    src/video/img_settings.cpp
    src/video/img_settings.h
    src/video/renderer.cpp
    src/video/renderer.h
    src/video/video.cpp
    src/video/video.h
    main.cpp)

add_executable(jni ${SOURCE_FILES})
